ver 0.6.5
- Added support for Solaris/illumos.
- Added support for MinGW-w64.
- Fixed a bug that Windows was not able to handle long paths
  (that have more than 260 characters.)
- Fixed a bug that OpenBSD was not able to get executable paths.
- Fixed a bug that empty strings were removed from arguments on Windows.
- Refactored codes to reduce potential bugs.

ver 0.6.4
- Added Universal CRT version for Windows 10 or later
- Fixed a bug that the execution button still says "processing" after getting errors.

ver 0.6.3
- Supported Unix-like systems (FreeBSD, Haiku, etc).
- Added URL validation for safety.
  (You can not open help URLs contain some special characters.)

ver 0.6.2
- Fixed typos.
- Fixed a bug that the menu can be empty on macOS.
- Added safe mode.

ver 0.6.1
- Added radio buttons to GUI components
- "placeholder" became the standard spelling for the placeholders option.
  ("empty_message" became the alternative one.)
- "combo" became the standard spelling for the combo boxes.
  ("choice" became the alternative one.)
- Fixed an error when opening URLs with debug builds.
- Fixed a crash when the executed process uses multiprocessing and each child process sends something to stdout.
- Fixed a bug that drag-drop events are ignored on newer versions of GTK.
- Fixed a bug that tuw didn't check the type of the `"default"` values for combo boxies.

ver 0.6.0
- Switched GUI library from wxWidgets to libui.
- Changed license from GPL to MIT.
- Fixed a bug that old components won't be freed when putting new components.

ver 0.5.1
- Added a predefined ID for the user's home directory.
- Added an option to rename the "Browse" button for path pickers.
- Disabled c++ exceptions.
- Removed more codes from wxWidgets.
- Fixed crashes when opening URLs or files via the help menu.
- Removed compilation warnings about overriding.

ver 0.5.0
- Changed the json formats for "choice" and "check_array"
- Added command-line utils to embed json into exe.